# OpenGL-Wrapper

./: .gitignore  CMakeLists.txt  LICENSE  README.md
demo/: cube-demo.cc  model-demo.cc  shading.cc  write-texture-demo.cc
example/: encode_image_pixel2uv_projection.cc  encode_pixel2uv.h  encode_sequence_pixel2uv_projection.cc  render_cube.cc  render_shaded_texture.cc  render_textured_model_multi_light.cc  render_to_fbo.cc  synthesize_srid_dataset.cc
example/script/: DecodeProjection.m  DecodeProjectionFromFile.m  Mat2Vec.m  TestBeethovenProjection.m  TestFaceProjection.m  convert.py
example/synthesize_srid_dataset/: config_loader.h  generate_spherical_poses.cc  lights.yaml  params.yaml  poses.yaml  synthesize_srid_dataset.cc
include/: args.cc  args.h  camera.cc  camera.h  cxxopts.h  glwrapper.h  model.cc  model.h  program.cc  program.h  texture.cc  texture.h  trajectory.cc  uniform.cc  uniform.h  window.cc
include/GLObjects/: camera.h  plane.h
include/gl_objects/: camera.h  gl_object.h  mesh_object.h  plane.h  v_demo.h  vntf_demo.h
include/utils/: context.h  control.h  model.h  shader.h  texture.h
model/face/: face-extrinsic.txt  face-intrinsic.txt
script/: TestBeethovenProjection.m  TestFaceProjection.m  TestProjection.m  TestProjection.m~  Vec2Mat.m
shader/: float_tex_fragment.glsl  float_tex_vertex.glsl  fragment_atlas.glsl  fragment_cube.glsl  fragment_plane.glsl  fragment_v.glsl  fragment_vntf.glsl  model_fragment.glsl  model_vertex.glsl  multi_light_model_fragment.glsl  multi_light_model_vertex.glsl  primitive_vertex.glsl  proj_fragment_pass2.glsl  proj_vertex_pass1.glsl  reproj_fragment.glsl  shading_fragment.glsl  shading_vertex.glsl  simple_model_fragment.glsl  simple_texture_vertex.glsl  tex_fragment.glsl  tex_vertex.glsl  textured_model_fbo_fragment.glsl  textured_model_multi_light_fragment.glsl  textured_model_multi_light_vertex.glsl  textured_model_vertex.glsl  vertex2.glsl  vertex_atlas.glsl  vertex_cube.glsl  vertex_plane.glsl  vertex_v.glsl  vertex_vntf.glsl  vntf_fragment.glsl  vntf_vertex.glsl  write_uv_fragment.glsl
shader/backup/: proj_vertex_pass2.glsl  reproj_vertex.glsl
src/: args.cc  args.h  atlas.cc  camera.cc  camera.h  cube-demo.cc  cube.cc  float_texture.cc  frame_buffer.cc  frame_buffer.h  framebuffer.cc  framebuffer.h  main.cc  main_cube.cc  model-demo.cc  model.cc  program.cc  program.h  projection.cc  shading.cc  texture.cc  texture.h  uniforms.cc  uniforms.h  v.cc  vntf.cc  window.cc  window.h  write-texture-demo.cc
src/GLObjects/: camera.cc  plane.cc
src/gl_objects/: camera.cc  gl_object.cc  mesh_object.cc  plane.cc
src/utils/: CMakeLists.txt  context.cc  control.cc  model.cc  shader.cc  texture.cc
